--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre Mim</a></li>
           <li><a href="#projetos">Projetos</a></li>
-          <li><a href="#contatos">Contato</a></li>
+          <li><a href="#contatos">Contatos</a></li>
         </ul>
         <i class="fa-solid fa-bars"></i>
       </nav>
@@ -27,7 +27,7 @@
 
 
     </header>
-    <section aria-label="Seção currículo download Alex" class="section">
+    <section aria-label="Seção currículo download Alex" class="myinformations">
       <div>
         <h2>Olá, Eu sou</h2>
 
@@ -119,8 +119,8 @@
   </section>
 
   <footer>
-    <div class="sobre_titulo">
-      <h1>Contatos</h1>
+    <div id="contatos" class="sobre_titulo">
+      <h1 >Contatos</h1>
       <p>Todos os meios de contatos comigo!!</p>
     </div>
     <nav aria-label="navegação das redes sociais">
