Ajustes na responsividade.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </header>
     <section aria-label="Seção currículo download Alex" class="myinformations">
       <div>
+        <div class="myinformations2">
         <h2>Olá, Eu sou</h2>
 
         <h2 class="animacao">Desenvolvedor Front-End</h2>
+      </div>
 
         <p>
           Sou um desenvolvedor entusiasmado e tenho objetivo de atuar como
