Alterações nos items: imagens e css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <a href="/CV Alex Lucas.pdf" download="CV Alex Lucas"><button>Download CV</button></a>
 
           <a href="https://github.com/AlexCaturyty">
-            <img src="./img/github.png" height="24px" /></a>
+            <img src="./img/github.png" height="24px" />
+          </a>
           <a href="https://www.linkedin.com/in/alex-cavalcanti-198979216/">
             <img src="./img/linkedin.png" height="24px" /></a>
         </div>
@@ -63,7 +64,7 @@
         <p>Perfil Profissional</p>
       </div>
 
-      <img src="./img/AlexAboutMe.JPG" />
+      <img src="./img/AlexAboutMe.webp" />
 
       <div class="sobre-mim">
         <div class="texto-sobre-mim">
