Adição de mais projetos

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
   <section id="projetos" class="projects">
     <div class="projects_titulo">
-      <h1> Meu Projetos</h1>
-      <p>Aqui estão os meu projetos</p>
+      <h1> Meus Projetos</h1>
+      <p>Aqui estão todos os meus projetos</p>
     </div>
 
     <div class="projects_armazenamentos">
@@ -132,6 +132,10 @@
           <a href="https://github.com/AlexCaturyty/nlw-spacetime"><img src="./img/CapsuladoTempo.png"
               alt="Site mostrando um catálogo de personagens do X-men"></a>
         </div>
+        <div class="slide">
+          <a href="https://github.com/AlexCaturyty/E-commerce"><img src="./img/E-commerce.png"
+            alt="E-commerce de livros"></a>
+        </div>
       </div>
 
 
@@ -146,13 +150,15 @@
         <li id="website"><a href="https://github.com/AlexCaturyty/CaboDeGuerra"><img src="./img/CabodeGuerra.png" alt="História cabo de guerra"></a></li>
         <li id="website"><a href="https://github.com/AlexCaturyty/ClimaTempo"><img src="./img/ClimaTempo.png" alt="Aplicação de clima "></a></li>
         <li id="website"><a href="https://github.com/AlexCaturyty/X-men"><img src="./img/Xmen.png" alt="Site mostrando um catálogo de personagens do X-men"></a></li>
-        <li id="website"> <a href="https://github.com/AlexCaturyty/nlw-spacetime"><img src="./img/CapsuladoTempo.png"
-              alt="Projeto realizado junto com a nlw-spacetime da Rocket-Seat"></a>
-        </li>
+        <li id="website"> <a href="https://github.com/AlexCaturyty/E-commerce"><img src="./img/E-commerce.png"
+              alt="E-commerce de livros"></a></li>
+        <div class="menos"><li id="website"> <a href="https://github.com/AlexCaturyty/nlw-spacetime"><img src="./img/CapsuladoTempo.png"
+          alt="Nlw-spacetime da Rocket-Seat"></a>
+        </li></div>
       </ul>
     </div>
 
-    <!-- <a href="#">Carregar mais...</a> -->
+     <a href="#" id = "lerMais">Carregar mais...</a> 
   </section>
 
   <footer>
